// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cubemap inspector prepare currentSelectSource test change wrap test set wrapS to Repeat test snapshot 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-asset"
  >
    <article
      className="wonder-cubemap-inspector"
    >
      <h1>
        Cubemap
      </h1>
      <hr />
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="cubemap's name"
        >
          Name
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="cubemap1"
          />
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap +X source"
        >
          Right(+ X)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap -X source"
        >
          Left(- X)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap +Y source"
        >
          Top(+ Y)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap -Y source"
        >
          Bottom(- Y)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap +Z source"
        >
          Front(+ Z)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap -Z source"
        >
          Back(- Z)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="repetitive pattern in horizontal direction of cubemap"
        >
          WrapS
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="2"
          >
            <option
              value="2"
            >
              Repeat
            </option>
            <option
              value="1"
            >
              Mirrored_repeat
            </option>
            <option
              value="0"
            >
              Clamp_to_edge
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="repetitive pattern in vertical direction of cubemap"
        >
          WrapT
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="2"
            >
              Repeat
            </option>
            <option
              value="1"
            >
              Mirrored_repeat
            </option>
            <option
              value="0"
            >
              Clamp_to_edge
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="defines how cubemaps are sampled when a texel covers multiple pixels"
        >
          Mag Filter
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="1"
          >
            <option
              value="0"
            >
              Nearest
            </option>
            <option
              value="1"
            >
              Linear
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="defines how cubemaps are sampled when a texel is insufficient to cover a single pixel"
        >
          Min Filter
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="0"
            >
              Nearest
            </option>
            <option
              value="1"
            >
              Linear
            </option>
            <option
              value="2"
            >
              Nearest_mipmap_nearest
            </option>
            <option
              value="3"
            >
              Linear_mipmap_nearest
            </option>
            <option
              value="4"
            >
              Nearest_mipmap_linear
            </option>
            <option
              value="5"
            >
              Linear_mipmap_linear
            </option>
          </select>
        </div>
      </article>
    </article>
  </article>
</article>
`;

exports[`cubemap inspector prepare currentSelectSource test cubemap inspector->show default value test snapshot 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-asset"
  >
    <article
      className="wonder-cubemap-inspector"
    >
      <h1>
        Cubemap
      </h1>
      <hr />
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="cubemap's name"
        >
          Name
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="cubemap1"
          />
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap +X source"
        >
          Right(+ X)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap -X source"
        >
          Left(- X)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap +Y source"
        >
          Top(+ Y)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap -Y source"
        >
          Bottom(- Y)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap +Z source"
        >
          Front(+ Z)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap -Z source"
        >
          Back(- Z)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="repetitive pattern in horizontal direction of cubemap"
        >
          WrapS
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="2"
            >
              Repeat
            </option>
            <option
              value="1"
            >
              Mirrored_repeat
            </option>
            <option
              value="0"
            >
              Clamp_to_edge
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="repetitive pattern in vertical direction of cubemap"
        >
          WrapT
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="2"
            >
              Repeat
            </option>
            <option
              value="1"
            >
              Mirrored_repeat
            </option>
            <option
              value="0"
            >
              Clamp_to_edge
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="defines how cubemaps are sampled when a texel covers multiple pixels"
        >
          Mag Filter
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="1"
          >
            <option
              value="0"
            >
              Nearest
            </option>
            <option
              value="1"
            >
              Linear
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="defines how cubemaps are sampled when a texel is insufficient to cover a single pixel"
        >
          Min Filter
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="0"
            >
              Nearest
            </option>
            <option
              value="1"
            >
              Linear
            </option>
            <option
              value="2"
            >
              Nearest_mipmap_nearest
            </option>
            <option
              value="3"
            >
              Linear_mipmap_nearest
            </option>
            <option
              value="4"
            >
              Nearest_mipmap_linear
            </option>
            <option
              value="5"
            >
              Linear_mipmap_linear
            </option>
          </select>
        </div>
      </article>
    </article>
  </article>
</article>
`;

exports[`cubemap inspector prepare currentSelectSource test cubemap rename test rename to specific name test snapshot 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/cubemap.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        newCubemapName
      </span>
    </div>
  </article>
</article>
`;

exports[`cubemap inspector prepare currentSelectSource test load and set face source test snapshot should has no face source defaultly 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-asset"
  >
    <article
      className="wonder-cubemap-inspector"
    >
      <h1>
        Cubemap
      </h1>
      <hr />
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="cubemap's name"
        >
          Name
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="cubemap1"
          />
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap +X source"
        >
          Right(+ X)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap -X source"
        >
          Left(- X)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap +Y source"
        >
          Top(+ Y)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap -Y source"
        >
          Bottom(- Y)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap +Z source"
        >
          Front(+ Z)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap -Z source"
        >
          Back(- Z)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="repetitive pattern in horizontal direction of cubemap"
        >
          WrapS
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="2"
            >
              Repeat
            </option>
            <option
              value="1"
            >
              Mirrored_repeat
            </option>
            <option
              value="0"
            >
              Clamp_to_edge
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="repetitive pattern in vertical direction of cubemap"
        >
          WrapT
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="2"
            >
              Repeat
            </option>
            <option
              value="1"
            >
              Mirrored_repeat
            </option>
            <option
              value="0"
            >
              Clamp_to_edge
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="defines how cubemaps are sampled when a texel covers multiple pixels"
        >
          Mag Filter
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="1"
          >
            <option
              value="0"
            >
              Nearest
            </option>
            <option
              value="1"
            >
              Linear
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="defines how cubemaps are sampled when a texel is insufficient to cover a single pixel"
        >
          Min Filter
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="0"
            >
              Nearest
            </option>
            <option
              value="1"
            >
              Linear
            </option>
            <option
              value="2"
            >
              Nearest_mipmap_nearest
            </option>
            <option
              value="3"
            >
              Linear_mipmap_nearest
            </option>
            <option
              value="4"
            >
              Nearest_mipmap_linear
            </option>
            <option
              value="5"
            >
              Linear_mipmap_linear
            </option>
          </select>
        </div>
      </article>
    </article>
  </article>
</article>
`;

exports[`cubemap inspector prepare currentSelectSource test load and set face source test snapshot should show face source image after load 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-asset"
  >
    <article
      className="wonder-cubemap-inspector"
    >
      <h1>
        Cubemap
      </h1>
      <hr />
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="cubemap's name"
        >
          Name
        </div>
        <div
          className="item-content"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="cubemap1"
          />
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap +X source"
        >
          Right(+ X)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <img
              src="newImgBase64222"
            />
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap -X source"
        >
          Left(- X)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap +Y source"
        >
          Top(+ Y)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap -Y source"
        >
          Bottom(- Y)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap +Z source"
        >
          Front(+ Z)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="wonder-cubemap-inspector-faceSource"
      >
        <div
          className="item-header"
          title="cubemap -Z source"
        >
          Back(- Z)
        </div>
        <div
          className="item-content item-texture"
        >
          <div
            className="texture-img"
          >
            <input
              className="cubemap-faceSource-loadAndSetSource"
              multiple={false}
              onChange={[Function]}
              type="file"
            />
          </div>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="repetitive pattern in horizontal direction of cubemap"
        >
          WrapS
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="2"
            >
              Repeat
            </option>
            <option
              value="1"
            >
              Mirrored_repeat
            </option>
            <option
              value="0"
            >
              Clamp_to_edge
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="repetitive pattern in vertical direction of cubemap"
        >
          WrapT
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="2"
            >
              Repeat
            </option>
            <option
              value="1"
            >
              Mirrored_repeat
            </option>
            <option
              value="0"
            >
              Clamp_to_edge
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="defines how cubemaps are sampled when a texel covers multiple pixels"
        >
          Mag Filter
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="1"
          >
            <option
              value="0"
            >
              Nearest
            </option>
            <option
              value="1"
            >
              Linear
            </option>
          </select>
        </div>
      </article>
      <article
        className="inspector-item"
      >
        <div
          className="item-header"
          title="defines how cubemaps are sampled when a texel is insufficient to cover a single pixel"
        >
          Min Filter
        </div>
        <div
          className="item-content"
        >
          <select
            onChange={[Function]}
            value="0"
          >
            <option
              value="0"
            >
              Nearest
            </option>
            <option
              value="1"
            >
              Linear
            </option>
            <option
              value="2"
            >
              Nearest_mipmap_nearest
            </option>
            <option
              value="3"
            >
              Linear_mipmap_nearest
            </option>
            <option
              value="4"
            >
              Nearest_mipmap_linear
            </option>
            <option
              value="5"
            >
              Linear_mipmap_linear
            </option>
          </select>
        </div>
      </article>
    </article>
  </article>
</article>
`;
